# fm4tag

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml  tree.txt
configs/: atlas_tracks_saint.yaml  default.yaml  finetune.yaml  jets_only.yaml  model_0_col.yaml  model_0_colrow.yaml  model_0_colrow_small.yaml  pretrain.yaml  rowcol_es128_j32_t32.yaml  rowcol_es128_j64_t64.yaml  test_0.yaml
configs/augmentation/: 4view.yaml  cutmix_mixup.yaml  cutmix_only.yaml  dilation.yaml  multi_view.yaml  none.yaml
configs/callbacks/: default.yaml
configs/data/: atlas_tracks.yaml
configs/encoder/: saint_base.yaml  saint_small.yaml
configs/eval/: disabled.yaml  online.yaml
configs/head/: multistream.yaml
configs/old_configs/: model_0_col_small.yaml  time_experiment.yaml
configs/optimizer/: adamw_cosine.yaml
configs/trainer/: gpu_ddp.yaml  gpu_single.yaml
notebooks/: augmentations.ipynb  code_test.ipynb  code_tests.ipynb  datamodule_test.ipynb  dataset_dataloader.ipynb  dataset_test.ipynb  function_tests.ipynb  pretraining_module_test.ipynb  roc_plots.ipynb  simple_plots.ipynb  time_test.ipynb
notebooks/old_notebooks/: dataset_test.ipynb  (+3 more)
scripts/: ddp_loss_invariance.py  model_summary.py  plot_losses.py  plot_uniformity.py  plot_uniformity_yaml.py  run_jets_only_test.py  run_jets_only_test.sh
slurm/: classify_from_scratch.sh  finetune.sh  gpu_monitor.sh  inspect_metrics.ipynb  pretrain.sh
tests/: README.md  conftest.py  test_augmentations.py  test_chunked_attention.py  test_datasets.py  test_instantiate.py  test_losses.py  test_modules.py
(+102 files in other folders)
