[project]
name = "fm4tag"
version = "0.1.0"
description = "Library for development and training of Embedding models for HEP particle jet's data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "hydra-core>=1.3.2",
    "ipykernel>=7.1.0",
    "lightning>=2.6.0",
    "omegaconf>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff.format]
quote-style = "single"