[project]
name = "fm4tag"
version = "0.1.0"
description = "Library for development and training of Embedding models for HEP particle jet's data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "h5py>=3.15.1",
    "hydra-core>=1.3.2",
    "ipykernel>=7.1.0",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "omegaconf>=2.3.0",
    "optuna>=4.7.0",
    "puma-hep>=0.5.1",
    "tensorboard>=2.20.0",
    "wandb>=0.28.0",
]

[project.scripts]
fm4tag      = "fm4tag.engine:main"
fm4tag-eval = "fm4tag.eval_encoder:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-timeout>=2.3.1",
    "ruff>=0.14.11",
    "setuptools<71",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
markers = [
    "ddp: mark test as requiring a DDP process group (gloo backend, CPU-only)",
]

[tool.ruff.format]
quote-style = "single"
